// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gardener-dashboard-terminal-bootstrapper secret-apiserver-tls should render the templates 1`] = `
Object {
  "apiVersion": "v1",
  "data": Object {
    "tls.crt": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCmRHeHpMbU55ZEE9PQotLS0tLUVORCBDRVJUSUZJQ0FURS0tLS0t",
    "tls.key": "LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpkR3h6TG10bGVRPT0KLS0tLS1FTkQgUlNBIFBSSVZBVEUgS0VZLS0tLS0=",
  },
  "kind": "Secret",
  "metadata": Object {
    "labels": Object {
      "app.kubernetes.io/component": "terminal-bootstrapper",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-runtime-0.1.0",
    },
    "name": "garden-host-cluster-apiserver-tls",
    "namespace": null,
  },
  "type": "kubernetes.io/tls",
}
`;

exports[`gardener-dashboard-terminal-bootstrapper secret-kubeconfig should render the template 1`] = `
Object {
  "apiVersion": "v1",
  "data": Object {
    "kubeconfig.yaml": Any<String>,
  },
  "kind": "Secret",
  "metadata": Object {
    "labels": Object {
      "app.kubernetes.io/component": "terminal-bootstrapper",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-runtime-0.1.0",
    },
    "name": "gardener-dashboard-terminal-bootstrapper-secret-kubeconfig",
    "namespace": "garden",
  },
  "type": "Opaque",
}
`;

exports[`gardener-dashboard-terminal-bootstrapper secret-kubeconfig should render the template: kubeconfig.yaml 1`] = `
Object {
  "apiVersion": "v1",
}
`;
